Fix: Ammend spacing betwwen next button and ammend title size.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,7 @@ h1 {
         padding: 5px;
     }
     .header {
-        font-size: 170%;
+        font-size: 160%;
         display: flex;
         
     }
@@ -214,6 +214,7 @@ h1 {
         width: 100%;
         position: relative;
         bottom: 0;
+        padding: 7px;
     }
     #timer-area{
         margin: 0.5em auto;
